test/files/errors/dotInstantError.jg
_main int ()
{
    x int = 42.len;

    0 return;
}